--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # No need for DATABASE_URL to be set if developing from within a devcontainer
 
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
+SECRET_KEY=A%D*G-KaPdSgVkYp3s6v8y/B?E(H+MbQeThWmZq4t7w!z%C&F)J@NcRfUjXn2r5u
 DATABASE_URL=sqlite:///dev.db
